--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,java-web,macos,eclipse,windows
+Hello/src/main/webapp/WEB-INF/web.xml
+Hello/src/main/webapp/WEB-INF/spring/appServlet/servlet-context.xml
+Hello/src/main/webapp/WEB-INF/spring/root-context.xml
